fix by wangpanzhi

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -1,5 +1,5 @@
 {
-  "projectname": "%252525E6%25252597%252525A5%252525E5%2525258E%25252586%252525E7%252525BB%25252584%252525E4%252525BB%252525B6",
+  "projectname": "mini-calendar",
   "setting": {
     "compileHotReLoad": true,
     "urlCheck": true,
